@@ -42,4 +42,12 @@ subprojects {
     tasks.named('test') {
         useJUnitPlatform()
     }
+
+    tasks.withType(JavaCompile).each {
+        it.options.compilerArgs.add('--enable-preview')
+    }
+
+    bootRun {
+        jvmArgs(['--enable-preview'])
+    }
 }
